--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
 
         <div class="message">🚀 Stay Cyber Smart! Protect Yourself & Help Others Stay Safe! 💙💡</div>
         <p style="text-align: center; font-weight: bold;">🌟 Best wishes from Aman Saraswat🎉😊</p>
+<a href="more.html" style="
+    display: block;
+    width: 250px;
+    margin: 20px auto;
+    padding: 12px;
+    text-align: center;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 1.2em;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+">
+    🔎 More on Cyber Security 🔒
+</a>
+        
     </div>
 
 
