--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="container">
 
-        <a href="#video" class="video-button">🎥 Watch Video</a>
+        <a href="#video" class="video-button">🎥 Watch Hologram projector Video</a>
 
         <div class="message">🌟 Stay Safe, Stay Smart! Your Online Safety Matters! 🔐🌍</div>
 
@@ -98,7 +98,7 @@
 
         <!-- 🎬 Video Section with Play Button -->
         <div id="video" style="text-align: center;">
-            <h2>🎬 Cyber Safety Video</h2>
+            <h2>🎬 Hologram projector</h2>
             <video id="hologramVideo" controls>
                 <source src="hologram.mp4" type="video/mp4">
                 Your browser does not support the video tag.
