--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
 
         <!-- 📺 Embedded YouTube Videos -->
         <div>
-            <h2 style="text-align:center;">📺 YouTube Video 1 – Cyber Safety Animation</h2>
+                  <h2 style="text-align:center;">📺 YouTube Video 2 – Voting</h2>
+            <iframe src="https://www.youtube.com/embed/MFD_iT1JfIo" 
+                    title="YouTube Video 2" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+            </iframe>
+            
+            <h2 style="text-align:center;">📺 YouTube Video 1 – Sports</h2>
             <iframe src="https://www.youtube.com/embed/yJJAutVQWAg?si=p7CsfXZtlER-DD_s" 
                     title="YouTube Video 1" 
                     frameborder="0" 
@@ -123,13 +131,7 @@
                     allowfullscreen>
             </iframe>
 
-            <h2 style="text-align:center;">📺 YouTube Video 2 – Cyber Security Tips</h2>
-            <iframe src="https://www.youtube.com/embed/MFD_iT1JfIo" 
-                    title="YouTube Video 2" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    allowfullscreen>
-            </iframe>
+
         </div>
 
     </div>
