--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <!-- 🎬 Local Video Section -->
         <div id="video">
-            <h2 style="text-align:center;">🎬 Cyber Safety Video</h2>
+            <h2 style="text-align:center;">🎬 Hologram Projector</h2>
             <video controls>
                 <source src="hologram.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -115,7 +115,7 @@
 
         <!-- 📺 Embedded YouTube Videos -->
         <div>
-                  <h2 style="text-align:center;">📺 YouTube Video 2 – Voting</h2>
+                  <h2 style="text-align:center;">📺 YouTube Video 1 – Voting</h2>
             <iframe src="https://www.youtube.com/embed/MFD_iT1JfIo" 
                     title="YouTube Video 2" 
                     frameborder="0" 
@@ -123,7 +123,7 @@
                     allowfullscreen>
             </iframe>
             
-            <h2 style="text-align:center;">📺 YouTube Video 1 – Sports</h2>
+            <h2 style="text-align:center;">📺 YouTube Video 2 – Sports</h2>
             <iframe src="https://www.youtube.com/embed/yJJAutVQWAg?si=p7CsfXZtlER-DD_s" 
                     title="YouTube Video 1" 
                     frameborder="0" 
